# mainichi

./: .gitignore  Cargo.toml  README.md
data/: kanji_ordered.txt
src/: ascii.rs  cli.rs  json.rs  main.rs  massif.rs  path.rs  pending.rs  service.rs  state.rs  terminal.rs  tokeniser.rs
