[package]
name = "mainichi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.13", features = ["json"] }
tokio = { version = "1.23.0", features = ["full"] }
serde = { version="1.0.152", features=["derive"] }
serde_json = "1.0"
clap = { version = "4.0.32", features = ["derive"] }
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls" ] }
thiserror = "1.0.38"
rand = "0.8.5"

[dev-dependencies]
bacon = "2.2.8"
clippy = "0.0.302"
rustfmt = "0.10.0"
